--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,29 @@
-# Xcode
+##
+# Some of these are Github's suggested .gitignore files
+##
+
+##########
+## OS X ##
+##########
 .DS_Store
-*/build/*
+.AppleDouble
+.LSOverride
+
+# Icon must ends with two \r.
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+
+###########
+## Xcode ##
+###########
+build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -10,12 +33,16 @@
 *.perspectivev3
 !default.perspectivev3
 xcuserdata
+*.xccheckout
 profile
 *.moved-aside
 DerivedData
-.idea/
 *.hmap
-*.xccheckout
+*.ipa
 
-#CocoaPods
+
+###############
+## CocoaPods ##
+###############
 Pods
+
